CI: fix test command & run on macos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Coverage test
-      run: bash run-coverage
+      run: bash run-coverage.sh
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
